--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,20 @@
 </ion-header>
 
 <ion-content padding>
-    <button ion-button (click)="getRegistrationID()">get RegistrationID</button>
+    <button ion-button block (click)="getNotificationSetting()">get notification setting</button>
+    <!-- <button ion-button block (click)="addLocalNotification(5,'local_1')">add local notification 1</button>
+    <button ion-button block (click)="addLocalNotification(10,'local_2')">add local notification 2</button>
+    <button ion-button block (click)="deleteLocalNotification('local_1')">delete local notification 2</button>
+    <button ion-button block (click)="clearLocalNotification()">clear local notification</button> -->
+
+    <!-- <button ion-button block (click)="setBadge(6)">set badge</button>
+    <button ion-button block (click)="resetBadge()">reset badge</button>
+    <button ion-button block (click)="setLocalBadge(0)">set local badge</button>
+      <button ion-button block (click)="getLocalBadge()">get local badge</button> -->
+
+    
+
+    <!-- <button ion-button (click)="getRegistrationID()">get RegistrationID</button>
     <button ion-button block (click)="setAlias('jasonz_001')">set alias</button>
     <button ion-button block (click)="getAlias()">get alias</button>
     <button ion-button block (click)="deleteAlias()">delete alias</button>
@@ -17,6 +30,6 @@
     <button ion-button block (click)="getAllTags()">get all tags</button>
     <button ion-button block (click)="deleteTags(['2.0'])">delete tags</button>
     <button ion-button block (click)="cleanTags()">clean tags</button>
-    <button ion-button block (click)="checkTagBindState('vip')">check tag bind state</button>
+    <button ion-button block (click)="checkTagBindState('vip')">check tag bind state</button> -->
 
 </ion-content>
